added some comments, made code a little bit nicer to read, still messy though